# tnt-dynamite

./: BUGS  ChangeLog  LICENSE  Makefile.am  NEWS  ProjectHome.md  README  THANKYOU  TODO  acinclude.m4  autogen.sh  configure.ac
docs/papers/concur07/: Makefile  abbrev.sty  concur.dvi  concur.tex  literature.ajh  literature.bib  macros.tex  mpsmacros.tex  mpsproof.tex  proofmacros.tex
docs/papers/ja4mo07/: Makefile  literature.bib  macros.tex  paper.abortive.tex  paper.tex
lib/: Makefile.am  gen-classlist.sh.in
src/uk/ac/shef/dcs/dynamite/: Evolver.java  Process.java
src/uk/ac/shef/dcs/dynamite/ccs/: Action.java  CCSLabel.java  Nil.java  Prefix.java
src/uk/ac/shef/dcs/dynamite/evolvers/: Simulator.java
src/uk/ac/shef/dcs/dynamite/lts/: Label.java  Transition.java
src/uk/ac/shef/dcs/tnt-dynamite/: Process.java
trunk/: AUTHORS  BUGS  ChangeLog  HACKING  LICENSE  Makefile.am  NEWS  THANKYOU  TODO  acinclude.m4  autogen.sh  configure.ac
trunk/docs/papers/concur07/: Makefile  bussproofs.sty  concur.dvi  concur.tex  literature.bib  llncs.toc  macros.tex  mpsconcur.hs  mpsmacros.tex  mpsproof.tex  proofmacros.tex
trunk/docs/papers/ja4mo07/: literature.bib  paper.submitted.tex  paper.tex
trunk/lib/: .cvsignore  Makefile.am  gen-classlist.sh.in
trunk/src/uk/ac/shef/dcs/dynamite/: Evolver.java  Process.java
trunk/src/uk/ac/shef/dcs/dynamite/ccs/: Nil.java
trunk/src/uk/ac/shef/dcs/dynamite/evolvers/: Simulator.java
trunk/src/uk/ac/shef/dcs/dynamite/lts/: Label.java  State.java  Transition.java
